--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "register-service-worker": "^1.6.2",
-    "vue-property-decorator": "^8.3.0",
     "vue-class-component": "^7.0.2",
+    "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vue-i18n": "^8.15.3",
+    "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@mdi/font": "^4.7.95",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-pwa": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-typescript": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
