--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "firebase": "^7.6.1",
     "register-service-worker": "^1.6.2",
+    "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-i18n": "^8.15.3",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
-    "vue-i18n": "^8.15.3",
     "vuetify": "^2.1.0",
-    "vuex": "^3.1.2",
-    "vue": "^2.6.10"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@mdi/font": "^4.7.95",
