--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.15.3",
+    "vue-perfect-scrollbar": "^0.2.1",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
