--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "sass-loader": "^8.0.0",
     "typescript": "~4.5.5",
     "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.4.3"
+    "vue-template-compiler": "^2.6.10"
   }
 }
